--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.2.14",
+    "@aws-sdk/client-s3": "^3.637.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.4.0",
+    "process": "^0.11.10",
     "vite": "^4.4.11",
     "vite-plugin-checker": "^0.6.2"
   }
