--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "vite",
+    "start": "vite preview",
+    "build": "vite build",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "rm:all": "rm -rf node_modules .next out dist build",
     "re:start": "yarn rm:all && yarn install && yarn dev",
     "re:build": "yarn rm:all && yarn install && yarn build",
     "re:build-npm": "npm run rm:all && npm install && npm run build",
+    "dev:host": "vite --host",
+    "vite:start": "vite",
+    "vite:build": "vite build"
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.2.14",
@@ -56,6 +59,10 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "process": "^0.11.10"
+    "@vitejs/plugin-react-swc": "^3.4.0",
+    "process": "^0.11.10",
+    "typescript": "^5.5.4",
+    "vite": "^4.5.3",
+    "vite-plugin-checker": "^0.6.2"
   }
 }
